methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (!estFaceMur)
  {
  	avance()
		var coul = getCouleurSol
  	recule()
  	return coul == Color.green
  }
  else
  	return false
}
def run()
{
  while(!estSurBiscuit)
  {
    if (isFacingTrail())
      avance()
    else
      gauche
	}
}
